initat/cluster/frontend/static/css/icsw_src.css
#tooltip {
    position: absolute;
    z-index: 3000;
    border: 1px solid #111;
    background-color: #eee;
    padding: 5px;
    opacity: 0.95;
}
*::before, *::after {
    box-sizing: border-box;
}
*::after, *::before {
    box-sizing: border-box;
}
*::before, *::after {
    box-sizing: border-box;
}
*::after, *::before {
    box-sizing: border-box;
}
/* domain tree node styles */

ul.dynatree-container span.intermediate {
    font-style: italic;
}

ul.dynatree-container span.ip_ok {
    font-weight: bold;
}

.popover {
    max-width: 100% !important;
}

/* for sidebar */
.noborder {
    border: none;
    padding: 0;
}
.noborder.ui-tabs .ui-tabs-panel {
    padding: 0 0 0 0;
}

/* css for timepicker */
.ui-timepicker-div .ui-widget-header { margin-bottom: 8px; }
.ui-timepicker-div dl { text-align: left; }
.ui-timepicker-div dl dt { height: 25px; margin-bottom: -25px; }
.ui-timepicker-div dl dd { margin: 0 10px 10px 65px; }
.ui-timepicker-div td { font-size: 90%; }
.ui-tpicker-grid-label { background: none; border: none; margin: 0; padding: 0; }

.ui-timepicker-rtl{ direction: rtl; }
.ui-timepicker-rtl dl { text-align: right; }
.ui-timepicker-rtl dl dd { margin: 0 65px 10px 10px; }


th.icsw-config-rotate {
    height: 180px;
    white-space: nowrap;
}

th.icsw-config-rotate > div {
    transform:
        translate(18px, -9px)
        rotate(-40deg);
    width: 30px;
    font-size: 12px;
}

th.icsw-config-rotate > div > span {
  border-bottom: 1px solid #ccc;
  padding: 5px 10px;
}
/*
th.icsw-config-rotate {
    text-align:center;
    white-space:nowrap;
    transform:
        translate(80px, -2px)
        rotate(-45deg);
    width: 30px;
}
th.icsw-config-rotate > div {
    margin:0 -999px;/* virtually reduce space needed on width to very little * /
    display:inline-block;
}
th.icsw-config-rotate div:before {
    content:'';
    width:0;
    padding-top:70%;
    /* takes width as reference, + 10% for faking some extra padding * /
    display:inline-block;
    vertical-align:middle;
}*/
.angular-google-map-container {
    height: 480px;
}

/* modal changes */
.modal.modal-wide .modal-dialog {
  width: 90% !important;
}
.modal-wide .modal-body {
    overflow-y: auto !important;
}
.modal-tall .modal-body {
    overflow-y: auto !important;
}

/* use for striping tables where every odd row is a regular row
and every even row contains a collapsible row which is hidden by default */
.icsw-table-striped-4 > tbody > tr:nth-child(4n+1) {
    background-color: #f9f9f9;
}

/* always stripe 2 at a time */
.icsw-table-striped-2-by-2 > tbody > tr:nth-child(4n+0) {
    background-color: #f9f9f9;
}
.icsw-table-striped-2-by-2 > tbody > tr:nth-child(4n+1) {
    background-color: #f9f9f9;
}

/* striping as bootstrap striping but exactly the other row */
.icsw-table-striped-other > tbody > tr:nth-child(2n) {
    background-color: #f9f9f9;
}

ins {
    color: #080;
}
del {
    color: #a00;
}

.icswMenuColor {
    color: #333;
}

.fa_icsw {
    width: 1.5em;
    text-align: center;
}

.fa_top {
    width:1.4em;
}

.icsw-tooltip {
    position: absolute;
    float: left;
    min-width: 80px;
    max-width: 600px;
    padding: 5px 15px;
    border-radius: 2px;
    background: rgba(255, 255, 255, 1);
    color: #444;
    font-size: 12px;
    text-shadow: 0 1px 0 #fff;
    // text-transform: uppercase;
    text-align: center;
    line-height: 1.3;
    letter-spacing: .06em;
    z-index: 2000;
    box-shadow: 0 0 3px rgba(0, 0, 0, 0.2), 0 1px 2px rgba(0, 0, 0, 0.5);
    pointer-events: none;
}

.icsw-tooltip:after {
    /* triangle pointer at bottom of piechart tooltip */
    position: absolute;
    left: 50%;
    bottom: -6px;
    content: "";
    height: 0;
    z-index: 2000;
    margin: 0 0 0 -6px;
    border-right: 5px solid transparent;
    border-left: 5px solid transparent;
    border-top: 6px solid rgba(255, 255, 255, 0.95);
    line-height: 0;
}

.icsw-chart {
    cursor: pointer;
    position: relative;
}

.icsw-input-100px {
    width: 100px;
}

.icsw-input-50px {
    width: 50px;
}

.ace_editor {
    height: 200px;
}
button table {
    background-color: transparent;
}
.input-group .form-control-inline,
.form-control-inline {
    min-width: 0;
    width: auto;
    display: inline;
}
icsw-login-page .container-fluid {
    max-width: 400px;
    padding-top: 15px;
    margin-top:3%;
    }
ul.fancytree-container {
    font-family: Arial,Helvetica,sans-serif,FontAwesome;
}
.fancytree-container > li .fancytree-folder >.btn-group {
    margin-left: 5px;
    margin-top: -6px;
}
.fancytree-title > .label,
.fancytree-title > span > .label {
    margin-left:6px;
    padding: 0.2em 0.6em 0.1em;
}
.fancytree-checkbox{
    margin-top:2px;
}
.label-group>.label:first-child {
	border-top-right-radius: 0;
    border-bottom-right-radius: 0;
    margin-right: 0;
    border-right: 1px solid #cccccc;
}
.label-group>.label:not(.label:first-child):not(.label:last-child)   {
    border-radius: 0;
    margin-right: 0;
    margin-left: 0;
    border-right: 1px solid #cccccc;
 }
.label-group>.label:last-child {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
    margin-left: 0;
}
.ui-select-match > .ui-select-toggle > i.caret { right: 2px; }
.ui-select-match > .ui-select-toggle > .ui-select-match-text { margin-right: 6px;}

.input-group-addon-button {
    padding: 0 4px;
}
.cursorpointer {
    cursor: pointer;
}
.modal-form .modal-dialog {
    max-width:700px !important;
}
.table-paging-tools .form-group {
    margin:0px;
}

div[class*="col-"] > ul {
    padding: 0px 0px 0px 15px;
}

.tab-pane icsw-simple-device-info > .container-fluid {
    padding: 5px 0px;
}
.progress-bar {
    color: #000000;
}
icsw-connect-element-display .panel[layout_unlocked="true"] h4 {
    display: none;
}
icsw-connect-element-display .panel[layout_unlocked="false"] h4 {
    display: block;
    font-size: 14px;
    font-weight: 600;
    margin: 0 0 3px 0;
}
/* FORM STYLES START */
.icsw-formlabel {
    width: 250px;
    text-align: left !important;
}
.maxwidth500 {
    max-width: 500px;
    min-width: 240px;
}
.icsw-buttoncol {
    max-width: 765px;
    min-size: 250px;
    text-align: right;
    padding-right: 0px;
}
.maxwidth800 {
    max-width:800px;
}
/* FORM STYLES END */

/* HELP PAGE START */
.cfp-hotkeys-container {
    background-color: rgba(255, 255, 255, 0.6);
    text-align: center;
}
.cfp-hotkeys {
    background-color: rgba(245, 245, 245, 0.8);
    border: 1px solid #cccccc;
    display: inline-block;
    min-height: 180px;
    height: auto;
    margin-top: 150px;
    text-align: center;
    vertical-align: middle;
    width: 400px;
}
.cfp-hotkeys table {
    background-color: transparent;
    margin: 10px;
}
.cfp-hotkeys-keys {
    text-transform: uppercase;
}
/* HELP PAGE END */

/* BODY START */
body.condensed {
    padding-top: 75px;
}

body.normal {
    padding-top: 100px;
}

img.condensed {
    height: 42px;
}

img.normal {
    height: 58px;
}
/* BODY END */

/* YAMM START */
.yamm.nav,
.yamm.collapse,
.yamm.dropup,
.yamm.dropdown {
    position: static;
}
.yamm.container {
    position: relative;
}
.yamm.yamm-content {
    padding: 10px 15px;
}
.yamm.dropdown.yamm-fw .dropdown-menu {
    left: 0;
    right: 0;
}
.yamm .dropdown-menu {
    left: auto;
}
.yamm-content [class*="col-"] {
    min-width: 250px;
    padding: 5px 0 8px 15px;
}
div.yamm hr {

}
/* YAMM END */

/* MENU START */
.navbar.normal {
    margin-bottom: 17px;
    min-height: 70px;
}
.navbar.condensed {
    margin-bottom: 17px;
}
.yamm .nav, .yamm .collapse, .yamm .dropup, .yamm .dropdown {
    position: static;
}
.nav > li {
    display: block;
}
.navbar-nav {
    font-size: 14px;
}
.navbar-nav.normal > li > a {
    font-size: 18px;
    padding-bottom: 26.5px;
    padding-top: 26.5px;
    line-height: 17px;
}
.navbar-nav.condensed > li > a {
    padding-bottom: 16.5px;
    padding-top: 16.5px;
    line-height: 17px;
}
.navbar form.normal {
    /* menu searchfield */
    margin-top: 22px;
}
.navbar .label {
    padding: 1px 3px;
}
.navbar-nav.condensed > li > a > span.fa {
    /* add extra space to the icons in the menubar */
    padding-right: 3px;
}

.navbar.normal p {
    /* column heading for normal style */
    margin: 0 0 0px;
    font-size: 15px;
}

.navbar.condensed p {
    /* column heading for condensed style */
    margin: 0 0 0px;
    max-width: 200px;
    text-align: justify;
}

.navbar .dropdown-menu a {
    /* sub menu font size */
    font-size: 14px;
}
.navbar .disabled {
    color: #bbbbbb;
}
.navbar a.active {
    font-weight:bold;
}
.yamm-content li, .yamm-content li > a {
    /* space between links */
    padding: 2px 0px;
}
.navbar-right.normal li:last-of-type > a {
    /* usermenu (username below) */
    padding-bottom: 3px;
    text-align: right;
}
.navbar-right.normal li:last-of-type > a > div {
    /* usermenu (username below) */
    text-align: center;
    font-size: 12px;
    padding-right: 0px;
    margin-top: 5px;
}
.navbar-right .task-wizard {
    padding: 26px 5px 0 0 !important;
}
.navbar-right.condensed .task-wizard {
    padding: 14px 5px 0 0 !important;
}
.navbar-right .menu-openissues,
.navbar-right .menu-backgroundjobs {
    margin: 24px 5px 0 0 !important;
    padding: 1px !important;
}
.navbar-right.condensed .menu-openissues,
.navbar-right.condensed .menu-backgroundjobs {
    margin: 13px 5px 0 0 !important;
}
.navbar-right .task-wizard .wizardbutton{
    padding: 4px;
    font-size: 17px;
}
.ova-statusbutton td {
    font-size: 12px;
    font-weight: bold;
    color: #666666;
}
.ova-statusbutton {
    margin: 23px 0 0 0;
}
body.condensed .ova-statusbutton {
    margin: 5px 0 0 0;
}
.setupsteps__badge {
  margin: 0 0 0 0;
  background-color: #fa3e3e;
  border-radius: 2px;
  color: white;

  padding: 1px 3px;
  font-size: 10px;

  position: absolute;
  top: 14px;
  right: 8px;
}
/* MENU END */

/* SUBMENU START */
.sub-breadcrumb .menupath span:not(:first-of-type)::before {
    content: "» ";
    vertical-align: 1px;
}
.sub-breadcrumb .menupath a {
    color: #555555;
}
.sub-breadcrumb .menupath a:not([ui-sref]):hover {
    text-decoration: none;
}
/* SUBMENU END */
/* SVG TOOLTIPS START */
.svg-tooltip {
    position: fixed;
    z-index: 9999;
    max-width: 400px;
    min-width: 100px;
}
.svg-tooltip-content table {
    background-color: transparent;
}
.svg-tooltip-content {
    background-color: #ffffff;
}
.svg-tooltip-content td {
    background-color: transparent;
    vertical-align: top;
}
.svg-tooltip > .panel-heading {
    padding-left:5px;
}
/* SVG TOOLTIPS END */
icsw-tools-button-static.fa:before {
    margin-right: 3px;
}
.force-left {
    text-align: left !important;
}


/* fix mouse pointer from editing mode to pointer mode on sortable table columns */
th[st-sort] {
    cursor: pointer;
}

/* default sorting indicator for sortable table columns */
th[st-sort]:not(.st-sort-ascent):not(.st-sort-descent):before {
    font-family: FontAwesome;
    content: '\f0dc';
    display: inline-block;
    padding-right: 3px;
    vertical-align: middle;
}

